# proof-of-stake

./: .gitignore  .versionrc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: release-please.yml
.husky/: commit-msg
diagrams/: block.puml  blocks.puml  txns.puml
docs/diagrams/: Node Class.md  accounts.puml  acct.puml  blockMethods.puml  blocks.puml  node.puml  p2p.puml  txns.puml
src/: lib.rs  main.rs  txn.rs
src/accounts/: account.rs  accounts.rs  mod.rs
src/ledger/: TxnPool.rs  block.rs  blockchain.rs  blocks.rs  general.rs  mod.rs  txn.rs  txn_pool.rs  wallet.rs
src/ledger/block/: block_header.rs  block_id.rs  block_signature.rs  constants.rs  error.rs  getters.rs  mod.rs  setters.rs  types.rs  utils.rs  validation.rs
src/ledger/blockchain/: error.rs  getters.rs  mod.rs  setters.rs  types.rs  validation.rs
src/ledger/txn/: constants.rs  getters.rs  mod.rs  setters.rs  txn_header.rs  txn_id.rs  txn_signature.rs  types.rs  utils.rs
src/node/: error.rs  getters.rs  mod.rs  p2p.rs  setters.rs  types.rs  utils.rs
src/node/p2p/: error.rs  getters.rs  mod.rs  types.rs  utils.rs
src/utils/: blake_hash.rs  hash.rs  mod.rs  signature.rs
tests/: blockchain.rs  blocks.rs  mod.rs  txn.rs  txn_pool.rs  wallet.rs
tests/accounts/: accounts.rs  mod.rs
tests/block/: mod.rs
tests/blockchain/: mod.rs
tests/blocks/: mod.rs
tests/common/: constants.rs  fxns.rs  mod.rs
tests/node/: mod.rs
tests/txn/: mod.rs
tests/txn_pool/: mod.rs
tests/wallet/: mod.rs
