[package]
name = "posbc"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65", features = ["std"] }
arrayvec = "0.7.2"
base64 = "0.13.1"
blake3 = "1.3.3"
chrono = "0.4.22"
constant_time_eq = "0.2.4"
ed25519 = "1.5.2"
hex = "0.4.3"
rand = { version = "0.8.5", features = ["std"] }
secp256k1 = { version = "0.24.0", features = ["rand", "serde"] }
serde = { version = "1.0", features = ["derive"] } # serde = "1.0.145"
serde-big-array = "0.4.1"
serde_bytes = "0.11.7"
serde_json = "1.0.86"
thiserror = "1.0.37"
libp2p = { version = "0.50", features = [
    "tcp",
    "dns",
    "async-std",
    "noise",
    "mplex",
    "yamux",
    "websocket",
    "ping",
    "macros",
] }
futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes"] }
ed25519-dalek = { version = "1.0.1", features = ["std", "rand_core"] }
